Fixed overflow of the product page content

--- a/PharmacyApp/ClientApp/src/app/angular/footer/footer.component.scss
+++ b/PharmacyApp/ClientApp/src/app/angular/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .main-footer-container {
-    display: grid;
+    // display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: var(--light-green);
     border-top: 1px solid var(--light-blue-terciary);
