--- a/PharmacyApp/ClientApp/src/app/angular/productsPage/productsPage.component.scss
+++ b/PharmacyApp/ClientApp/src/app/angular/productsPage/productsPage.component.scss
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-columns: 25% 75%;
     background-color: var(--content-background);
-    height: 100%;
+    // height: 100%;
+    min-height: 500px;
     padding-bottom: 25px;
 
     .category-list {
@@ -62,6 +63,11 @@
                     color:  var(--primary-color);
                 }
             }
+        }
+
+        .content-item {
+            display: inline-block;
+            margin-bottom: 20px;
         }
     }
 }
